[gd_scene load_steps=12 format=2]

[ext_resource path="res://random_squirrel_2_node2D.gd" type="Script" id=1]
[ext_resource path="res://Area2D5.gd" type="Script" id=2]
[ext_resource path="res://Area2D7.gd" type="Script" id=3]
[ext_resource path="res://Area2D6.gd" type="Script" id=4]
[ext_resource path="res://art/squirrel.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 23.9897

[node name="random_squirrel_2" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D5" type="Area2D" parent="."]
position = Vector2( 888, -40 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 16
collision_mask = 2147483664
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D5"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Area2D5"]

[node name="Area2D6" type="Area2D" parent="."]
position = Vector2( 328, 648 )
scale = Vector2( 0.83, 0.83 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D6"]
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Area2D6"]

[node name="Area2D7" type="Area2D" parent="."]
scale = Vector2( 0.75, 0.75 )
collision_layer = 64
collision_mask = 64
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D7"]
frames = SubResource( 5 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D7"]
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Area2D7"]
[connection signal="area_entered" from="Area2D5" to="Area2D5" method="_on_Area2D5_area_entered"]
[connection signal="area_entered" from="Area2D5" to="." method="_on_Area2D5_area_entered"]
[connection signal="screen_exited" from="Area2D5/VisibilityNotifier2D" to="Area2D5" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D6" to="Area2D6" method="_on_Area2D6_area_entered"]
[connection signal="area_entered" from="Area2D6" to="." method="_on_Area2D6_area_entered"]
[connection signal="screen_exited" from="Area2D6/VisibilityNotifier2D" to="Area2D6" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D7" to="Area2D7" method="_on_Area2D7_area_entered"]
[connection signal="area_entered" from="Area2D7" to="." method="_on_Area2D7_area_entered"]
[connection signal="screen_exited" from="Area2D7/VisibilityNotifier2D" to="Area2D7" method="_on_VisibilityNotifier2D_screen_exited"]
